fix(material/form-field): insufficient color contrast text to input fill (#28274)
Increases contrast between text and label colors to bg input fill color.

--- a/src/material/core/tokens/m2/mat/_form-field.scss
+++ b/src/material/core/tokens/m2/mat/_form-field.scss
@@ -60,7 +60,7 @@ $prefix: (mat, form-field);
     disabled-select-arrow-color: rgba($on-surface, 0.38),
 
     hover-state-layer-opacity: if($is-dark, 0.08, 0.04),
-    focus-state-layer-opacity: if($is-dark, 0.24, 0.12),
+    focus-state-layer-opacity: if($is-dark, 0.24, 0.08),
   ));
 }
 
